--- a/style.css
+++ b/style.css
@@ -614,8 +614,8 @@ h1.section-text {
 /* business profile */
 
 .about-section .lawyer-section-title.business-profile {
+    min-height: 850px;
     height: fit-content;
-
 }
 
 /*lawyer button */
