working on hebrew - adding contact us page + sending email with EmailJS

--- a/assets/css/rtl.css
+++ b/assets/css/rtl.css
@@ -40,7 +40,7 @@ body {
 .mean-container .mean-nav ul li a.mean-expand {
     right: auto;
     left: 0;
-    text-align: center;
+    text-align: left;
 }
 
 /* Improved RTL menu arrow indicators */
