--- a/assets/css/theme-default.css
+++ b/assets/css/theme-default.css
@@ -1,10 +1,9 @@
 /*
-   font-family: 'Mulish', sans-serif;
-   font-family: 'Noto Serif', serif;
-
-
+   This theme now uses Assistant font defined in fonts.css
+   Previously used:
+   - 'Mulish' for body text
+   - 'Noto Serif' for headings
 */
-@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 html {
     scroll-behavior: smooth;
@@ -16,7 +15,7 @@ body {
     font-weight: 400;
     line-height: 28px;
     text-align: left;
-    font-family: 'Mulish', sans-serif;
+    font-family: var(--primary-font);
 }
 
 p {
@@ -32,7 +31,7 @@ h4,
 h5,
 h6 {
     color: #191514;
-    font-family: 'Noto Serif', serif;
+    font-family: var(--heading-font);
     font-style: normal;
     margin-bottom: 0;
     margin-top: 10px;
