--- a/style.css
+++ b/style.css
@@ -609,15 +609,21 @@ h1.section-text {
     border-radius: 5px 0 0 5px;
 }
 
+/* 
 .about-section.style-four .row.align-items-center .col-lg-6.col-md-12 .about-thumb3 {
     position: relative;
     top: -185px;
+} */
+
+.about-section.style-four .row.align-items-center .col-lg-6.col-md-12 {
+    align-self: flex-start;
 }
 
+/* 
 .about-section.style-four .row.align-items-center .col-lg-6.col-md-12 .about-thumb3.real-estate {
     position: relative;
     top: -255px;
-}
+} */
 
 /*about thumb*/
 
